Initialize ColorSpace parameter in ijs driver to DeviceRGB. This prevents a PostScript error in "currentpagedevice setpagedevice" and similar code when ColorSpace is not explicitly initialized. Fix bug 687013.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5746 a1074d23-0009-0410-80fe-cf8c14f379e6